<resources>
    <string name="app_name">Tandan Buah Segar</string>
    <string name="action_settings">Settings</string>

    <!-- Fragments -->
    <string name="report_fragment">Report Fragment</string>
    <string name="reportData_fragment">Record Data Fragment</string>

    <!-- Common Strings -->
    <string name="no_report">No Report</string>
    <string name="no_data">No data</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="total">Total</string>

    <!-- Report Dialog -->
    <string name="add_report_title">Add Report</string>
    <string name="edit_report_title">Edit Report</string>
    <string name="delete_report_title">Delete Report</string>
    <string name="title_label">Title</string>
    <string name="delete_report_wording">Are you sure want to delete Report "%1$s" ?</string>

    <!-- Report Data Dialog -->
    <string name="add_report_data_title">Add Report Data</string>
    <string name="edit_report_data_title">Edit Report Data</string>
    <string name="delete_report_data_title">Delete Report Data</string>
    <string name="date_label">Date</string>
    <string name="unit_label">Unit</string>
    <string name="tons_label">Tons</string>
    <string name="margin_label">Margin</string>
    <string name="txm_label">TxM</string>
    <string name="action_label">Action</string>
    <string name="delete_report_data_wording">Are you sure want to delete Report Data on date "%1$s" ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">Previous</string>
</resources>
