<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    tools:context=".dialogfragment.DeleteReportDataDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogReportData_title_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E3E3E3"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            android:text="@string/delete_report_data_title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CECECE" />

        <TextView
            android:id="@+id/deleteWording_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E3E3E3"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#CECECE" />

            <Button
                android:id="@+id/deleteReportData_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E3E3E3"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>